--- a/cluster_repo/ProcessingTemplate/ActivPassiveNodeTEst.Anow.wst_COPY.json
+++ b/cluster_repo/ProcessingTemplate/ActivPassiveNodeTEst.Anow.wst_COPY.json
@@ -3,6 +3,8 @@
   "owner": "dirudaya",
   "priority": "0",
   "processingType": "WORKFLOW",
+  "statisticMethod": "MEDIAN",
+  "statisticPeriod": "ALL",
   "tags": 
   [
     "DI"
@@ -61,6 +63,8 @@
       "processingTemplate": "ListApfnodes.Anow.sql",
       "processingType": "TASK",
       "serverNodeType": "POSTGRESQL",
+      "statisticMethod": "MEDIAN",
+      "statisticPeriod": "ALL",
       "taskType": "RDBMS_SQL_STATEMENT"
     },
     {
@@ -68,6 +72,8 @@
       "processingTemplate": "ParseNode_List.Anow.py",
       "processingType": "TASK",
       "serverNodeType": "LINUX",
+      "statisticMethod": "MEDIAN",
+      "statisticPeriod": "ALL",
       "taskType": "PYTHON",
       "dependencies": 
       [
@@ -86,6 +92,8 @@
       "name": "NodeStopTestJob.Anow.wfe",
       "processingTemplate": "NodeStopTestJob.Anow.wfe",
       "processingType": "WORKFLOW",
+      "statisticMethod": "MEDIAN",
+      "statisticPeriod": "ALL",
       "workflowType": "FOR_EACH",
       "dependencies": 
       [
